app/assets/stylesheets/application.css.scss
@import 'bourbon';
@import 'neat';
@import 'base/base';
@import 'modules/content';
@import 'modules/social_fonts';
@import 'specifics/contacts';
@import 'specifics/clients';

$logo-font: 'freight-big-pro', serif;
$interface-font: 'adelle-sans', sans-serif;

@import 'application/modules/sticky_navigation';

$container-top-margin: 7rem;
$container-left-margin: 15rem;

body, html {
  padding: 0; margin: 0;
}

.banner {
  background: asset-url('pattern@2x.png') repeat top left / 21px 22px;
  height: 12rem;
  margin-bottom: 6rem;
  position: relative;
}

.container {
  @include outer-container;

  .content {
    @include span-columns(7 of 12, no-display);
    @include shift(2.5);

    @include media(min-width 320px max-width 768px) {
      @include span-columns(10 of 12, no-display);
      @include shift(1);
    }
  }

  .essays {
    text-align: center;

    .essay {
      @include body-content;

      header {
        @include clearfix;

        .essay-title {
          @include title-content;
        }
      }

      footer {
        @include shift(2.5);
        @include span-columns(7);

        background: asset-url('pattern@2x.png') repeat top left / 21px 22px;
        height: 12px;
        margin-top: 4rem;
      }
    }
  }
}

nav {
  font-family: 'adelle-sans', sans-serif;
  font-size: 0.9rem;
  margin-bottom: $container-top-margin / 2;
  text-align: center;

  ul {
    .logo {
      font-family: 'freight-big-pro', serif;
      font-weight: 300;
    }

    li {
      a {
        color: $dark-gray;

        &:hover {
          color: lighten($dark-gray, 30);
        }
      }
    }

    .social {
      margin-top: 1rem;

      li {
        display: inline-block;
        margin-right: 0.5rem;
      }
    }
  }

  &.mobile {
    display: none;
  }
}

@media screen and (max-width: 1024px) {
  nav.mobile {
    display: block !important;
  }

  .StickyNavigation {
    display: none;
  }

  .banner {
    height: 10rem;
    margin-bottom: 4rem;
  }
}

.facebook, .twitter, .linkedin {
  display: inline;
  margin: 5px;
}

